# s4l-dti

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
.github/workflows/: deploy_and_test.yml
notebooks/: dti_preprocessing.ipynb  tutorial_dti_conductivity.ipynb
src/s4l_dti/: cli.py  data.py  denoise.py  imshow.py  reconstruct.py  register.py
tests/: conftest.py  test_data.py  test_reconstruct.py
